--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,14 @@
+# backend/requirements.txt
 fastapi
-uvicorn[standard]
+uvicorn
 python-dotenv
 google-generativeai
 httpx
-cachetools
-pandas
 sentence-transformers
 faiss-cpu
+cachetools
+beautifulsoup4
+requests
+pandas
+lxml # pandas.read_html requires this
+apscheduler
